# product_catalog

./: Dockerfile  README.md  alembic.ini  config.py  crud.py  database.py  docker-compose.yml  models.py  pyproject.toml  shemas.py  zit_app.py
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 24da8d326d4f_initial_migration.py
app/: config.py  crud.py  database.py  models.py  shemas.py  zit_app.py
tests/: api_test.py
